PR2 Release 2.1.5 fix broken css, image links

--- a/blocks/footer/__social-icon/footer__social-icon.css
+++ b/blocks/footer/__social-icon/footer__social-icon.css
@@ -2,5 +2,5 @@
     border: none;
     width: 16px;
     height: 16px;
-    margin: 0 10px 0 0;
+    margin-right: 10px;
 }
